.archived/kubernetes/networking/envoy-gateway/security.yaml
---
# yaml-language-server: $schema=https://soulwhisper.github.io/CRD-catalog/gateway.networking.k8s.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: kgateway-internal-secure
spec:
  extAuth:
    failOpen: false
    headersToExtAuth:
      - X-Forwarded-Proto
      - authorization
      - proxy-authorization
      - accept
      - cookie
    http:
      backendRefs:
        - group: ""
          kind: Service
          name: authelia
          namespace: security-system
          port: 80
      path: /api/authz/ext-authz/
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: kgateway-internal
